app-example-traefik-middleware-add-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: moose-traefik-mware
  namespace: default
spec:
  addPrefix:
    prefix: /moose
