app-example-traefik-middleware-strip-prefix-bear.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: bear-traefik-mware
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /bear
    forceSlash: false
