app-example-traefik-middleware-strip-prefix-hare.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: hare-traefik-mware
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /hare
    forceSlash: false
