app-example-traefik-middleware-strip-prefix-moose.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: moose-traefik-mware
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /moose
    forceSlash: false
